--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -3,7 +3,7 @@
 <div class="page_header">New House</div>
 <br>
 
-<%= form_for [@user, @house], :html => { :multipart => true } do |f|%>
+<%= form_for @house, :html => { :multipart => true } do |f|%>
 House Name: <br><%= f.text_field :name %><br><br>
 Where is it located?<br><br>
   <%= f.fields_for :address do |address_form| %>
