--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,4 +1,5 @@
-<h2><%= @house.name %>!</h2>
+<h1><%= @house.name %>!</h1>
+<h3><%= link_to "Edit", edit_house_path(@house) %></h3>
 <% if @property_manager == nil %>
 <%= link_to "Add Property Management Info", new_house_property_manager_path(@house) %>
 <% else %>
@@ -7,10 +8,10 @@ Your property manager:
 <%= link_to "Edit", edit_house_property_manager_path(@house, @property_manager) %>
 <% end %>
 <br><br>
-<% if @messages != nil %>
+<% if @messages.length != 0 %>
   <h4>Messages:</h4>
   <% @messages.each do |message| %>
-  @<%= message.housing_assignment.user.first_name %>: <%= message.content %> <br>
+  @<%= message.housing_assignment.user.first_name %>: <%= message.content %> <%= link_to("Delete", house_message_path(@house, message), method: :delete) %> <br>
   <% end %>
 <% end %>
 
