--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<%= form_tag("/logout", :controller=>"sessions", :method=>"delete") do %>
+  <%= submit_tag "Logout" %>
+<% end %>
+
 <% if current_user == @user %>
 <h2>Hi, <%= current_user.first_name%>!</h2>
 <%= image_tag @user.avatar.url %>
