--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -12,7 +12,7 @@ Your property manager:
 
 <div id="messages">
 <% if @messages.length != 0 %>
-  <h4>Messages:</h4>
+  <h3>Messages:</h3>
   <% @messages.each do |message| %>
   @<%= message.housing_assignment.user.first_name %>: <%= message.content %> <%= link_to("Delete", house_message_path(@house, message), method: :delete) %> <br>
   <% end %>
@@ -26,3 +26,23 @@ Your property manager:
   <%= f.submit "Send Message" %>
   <% end %>
 </div>
+
+<hr>
+
+<%= link_to "Rules", house_rules_path(@house) %>
+
+<hr>
+<div id="items">
+<% if @items.length != 0 %>
+  <h3>Communal Items:</h3>
+  <% @items.each do |item| %>
+  <%= item.name %>: <strong><%= item.stock_level %></strong>   
+  <%= link_to("Edit", edit_house_communal_item_path(@house, item)) %> <%= link_to("Delete", house_communal_item_path(@house, item), method: :delete) %> <br>
+  <% end %>
+<% end %>
+</div>
+<br>
+<%= link_to "Add Communal Item", new_house_communal_item_path(@house) %>
+
+
+
