--- a/app/views/communal_items/edit.html.erb
+++ b/app/views/communal_items/edit.html.erb
@@ -19,8 +19,8 @@
     <%= f.select :stock_level, options_for_select([["Select One", ""], "high", "low", "out"]) %>
   </p>
   <p>
-    <%= f.submit "Save Change" %>
+    <%= f.submit "Save Change", :class => "button"  %>
   </p>
   <% end %>
-  
+
 </div>
