--- a/app/views/houses/edit.html.erb
+++ b/app/views/houses/edit.html.erb
@@ -8,8 +8,8 @@
     <%= f.text_field :name %>
   </p>
   <p>
-    <%= f.submit "Save Change" %>
+    <%= f.submit "Save Change", :class => "button"  %>
   </p>
   <% end %>
-  
+
 </div>
