--- a/app/views/property_managers/edit.html.erb
+++ b/app/views/property_managers/edit.html.erb
@@ -22,7 +22,7 @@
   <%end%>
 
   <p>
-    <%= f.submit "Save Change" %>
+    <%= f.submit "Save Change", :class => "button"  %>
   </p>
 
   <% end %>
