--- a/app/views/property_managers/new.html.erb
+++ b/app/views/property_managers/new.html.erb
@@ -11,5 +11,5 @@ Email: <br><%= f.text_field :email %><br><br>
     State:<br> <%= address_form.text_field :state %><br><br>
     Zip Code: <br><%= address_form.text_field :zip_code %><br><br>
   <%end%>
-<%= f.submit "Submit" %>
+<%= f.submit "Submit", :class => "button"  %>
 <%end%>
