--- a/app/views/chores/edit.html.erb
+++ b/app/views/chores/edit.html.erb
@@ -1,5 +1,5 @@
   <%= form_for [@house, @chore], method: :patch do |f| %>
   <%= f.label :task %>
   <%= f.text_area :task %><br><br>
-  <%= f.submit "Update Rule" %>
+  <%= f.submit "Update Rule", :class => "button"  %>
   <% end %>
