--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -12,5 +12,5 @@ Where is it located?<br><br>
     State:<br> <%= address_form.text_field :state %><br><br>
     Zip Code: <br><%= address_form.text_field :zip_code %><br><br>
   <%end%>
-  <%= f.submit "Submit" %>
+  <%= f.submit "Submit", :class => "button"  %>
 <%end%>
