--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -23,7 +23,7 @@ Your property manager:
   <h4>New Message</h4>
   <%= form_for :message, url: house_messages_path(@house) do |f| %>
   <%= f.text_area :content %><br><br>
-  <%= f.submit "Send Message" %>
+  <%= f.submit "Send Message", :class => "button"  %>
   <% end %>
 </div>
 
@@ -36,7 +36,7 @@ Your property manager:
 <% if @items.length != 0 %>
   <h3>Communal Items:</h3>
   <% @items.each do |item| %>
-  <%= item.name %>: <strong><%= item.stock_level %></strong>   
+  <%= item.name %>: <strong><%= item.stock_level %></strong>
   <%= link_to("Edit", edit_house_communal_item_path(@house, item)) %> <%= link_to("Delete", house_communal_item_path(@house, item), method: :delete) %> <br>
   <% end %>
 <% end %>
