--- a/app/views/rules/edit.html.erb
+++ b/app/views/rules/edit.html.erb
@@ -1,4 +1,4 @@
   <%= form_for [@house, @rule], method: :patch do |f| %>
   <%= f.text_area :content %><br><br>
-  <%= f.submit "Update Rule" %>
+  <%= f.submit "Update Rule", :class => "button"  %>
   <% end %>
