--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@ Email:<br> <%= f.text_field :email %><br><br>
 Password: <br><%= f.password_field :password %><br><br>
 Password Confirmation: <br><%= f.password_field :password_confirmation %><br><br>
 Picture: <br><%= f.file_field :avatar %><br><br>
-<%= f.submit "Submit" %>
+<%= f.submit "Submit", :class => "button success"  %>
 <%end%>
 <div>
 </div>
