--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -36,13 +36,21 @@ Your property manager:
 <% if @items.length != 0 %>
   <h3>Communal Items:</h3>
   <% @items.each do |item| %>
-  <%= item.name %>: <strong><%= item.stock_level %></strong>   
+  <%= item.name %>: <strong><%= item.stock_level %></strong>
   <%= link_to("Edit", edit_house_communal_item_path(@house, item)) %> <%= link_to("Delete", house_communal_item_path(@house, item), method: :delete) %> <br>
   <% end %>
 <% end %>
 </div>
 <br>
 <%= link_to "Add Communal Item", new_house_communal_item_path(@house) %>
+
+<hr>
+
+<%= link_to "Chores", house_chores_path(@house) %>
+
+<hr>
+
+<%= link_to "Events", house_events_path(@house) %>
 
 
 
