--- a/app/views/houses/edit.html.erb
+++ b/app/views/houses/edit.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_field :name %>
   </p>
   <p>
+    <%= f.label :house_key %><br>
+    <%= f.text_field :house_key %>
+  </p>
+  <p>
     <%= f.submit "Save Change", :class => "button"  %>
   </p>
   <% end %>
