--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -5,6 +5,7 @@
 
 <%= form_for @house, :html => { :multipart => true } do |f|%>
 House Name: <br><%= f.text_field :name %><br><br>
+House Key: <br><%= f.text_field :house_key %><br><br>
 Where is it located?<br><br>
   <%= f.fields_for :address do |address_form| %>
     Address: <br><%= address_form.text_field :street %><br><br>
