--- a/app/views/communal_items/new.html.erb
+++ b/app/views/communal_items/new.html.erb
@@ -7,6 +7,6 @@
   Stock Level:
   <%= f.select :stock_level, options_for_select([["Select One", ""], "high", "low", "out"]) %>
   <br><br>
-  <%= f.submit, "New Item", :class => "button"  %>
+  <%= f.submit "New Item", :class => "button"  %>
   <% end %>
 </div>
