--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,7 @@
 <div id="events">
 <% if @events != nil %>
   <h4>Events:</h4>
-  <% @events.each do |collection| %>
-    <% collection.each do |event| %>
+  <% @events.each do |event| %>
     <%= event.housing_assignment.user.first_name %>: <%= event.name %> <br>
     Description: <%= event.description %><br>
     Date: <%= event.date%><br>
@@ -10,7 +9,6 @@
       data: {confirm: "Are you sure?"} %><br>
     <%= link_to 'Edit', edit_house_event_path(@house, event) %><br><br>
     <% end %>
-<% end %>
 <% end %>
 </div>
 <div>
