--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
 <h4>Your House:</h4>
 <% end %>
 <% @user.houses.each do |house| %>
-<%= house.name %> <%= link_to("Enter", house_path(house)) %><br>
+<%= house.name %> <%= link_to("Enter", house_messages_path(house)) %><br>
 <% end %>
 
 <br><br>
