--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -33,6 +33,18 @@ Your property manager:
 <%= link_to "Rules", house_rules_path(@house) %>
 
 <hr>
+
+<%= link_to "Communal Item", house_communal_items_path(@house) %>
+
+<hr>
+
+<%= link_to "Chores", house_chores_path(@house) %>
+
+<hr>
+
+<%= link_to "Events", house_events_path(@house) %>
+
+<hr>
 <div id="items">
 <% if @items.length != 0 %>
   <h3>Communal Items:</h3>
@@ -48,13 +60,7 @@ Your property manager:
 <br>
 <%= link_to "Add Communal Item", new_house_communal_item_path(@house) %>
 
-<hr>
 
-<%= link_to "Chores", house_chores_path(@house) %>
-
-<hr>
-
-<%= link_to "Events", house_events_path(@house) %>
 
 
 
