--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -13,6 +13,6 @@
   <h4>New Rule</h4>
   <%= form_for :rule, url: house_rules_path(@house), method: :post do |f| %>
   <%= f.text_area :content %><br><br>
-  <%= f.submit "Send Message", :class => "button"  %>
+  <%= f.submit "Create Rule", :class => "button"  %>
   <% end %>
 </div>
