--- a/app/views/chore_logs/index.html.erb
+++ b/app/views/chore_logs/index.html.erb
@@ -1,14 +1,21 @@
-<% if @chore_logs != nil %>
-  <h4>Completed Chores: </h4>
-  <% @house.users.each do |user| %>
-  <%= user.first_name + " " + user.last_name%><br>
-  <ul>
-    <% user.chores.uniq.each do |chore| %>
-    <li><%= chore.task + " "%><%= link_to 'I did this chore', house_chore_chore_logs_path(@house, chore), method: :post %><%="  " %><%="  " %>
-    <%= link_to "I didn't do it this much...", house_chore_chore_log_path(@house, chore, chore.chore_logs.last), method: :delete%></li>
-    <ul><li><%= "Times completed: " + chore.chore_logs.count.to_s %></li></ul>
+<div class="row">
+  <div class="large-3 columns"><br />
+  </div>
+  <div class="large-6 columns">
+    <% if @chore_logs != nil %>
+    <h4>Completed Chores: </h4>
+    <% @house.users.each do |user| %>
+    <%= user.first_name + " " + user.last_name%><br>
+    <ul>
+      <% user.chores.uniq.each do |chore| %>
+      <li><%= chore.task + " "%><%= link_to 'I did this chore', house_chore_chore_logs_path(@house, chore), method: :post %><%="  " %><%="  " %>
+        <%= link_to "I didn't do it this much...", house_chore_chore_log_path(@house, chore, chore.chore_logs.last), method: :delete%></li>
+        <ul><li><%= "Times completed: " + chore.chore_logs.count.to_s %></li></ul>
 
-    <% end %>
-  </ul>
-  <% end %>
-<% end %>
+        <% end %>
+      </ul>
+      <% end %>
+      <% end %>
+    </div>
+    <div class="large-3 columns"><br /></div>
+  </div>
