--- a/app/views/property_managers/edit.html.erb
+++ b/app/views/property_managers/edit.html.erb
@@ -1,29 +1,32 @@
-<div class="container">
-  <h1>Edit Property Manager</h1>
-
-  <%= form_for [@house, @manager] do |f|%>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </p>
-  <p>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
-  <%= f.fields_for @address do |address_form| %>
-    Address: <br><%= address_form.text_field :street %><br><br>
-    City: <br><%= address_form.text_field :city %><br><br>
-    State:<br> <%= address_form.text_field :state %><br><br>
-    Zip Code: <br><%= address_form.text_field :zip_code %><br><br>
-  <%end%>
-
-  <p>
-    <%= f.submit "Save Change", :class => "button"  %>
-  </p>
-
-  <% end %>
+<div class="row">
+  <div class="large-3 columns"><br />
+  </div>
+  <div class="large-6 columns">
+    <div class="container">
+      <%= form_for [@house, @manager] do |f|%>
+      <fieldset>
+      <legend>Edit your Property Manager's Information</legend>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+      <%= f.label :phone %>
+      <%= f.text_field :phone %>
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+      <%= f.fields_for @address do |address_form| %>
+      <%= f.label :street %>
+      <%= address_form.text_field :street %>
+      <%= f.label :city %>
+      <%= address_form.text_field :city %>
+      <%= f.label :state%>
+      <%= address_form.text_field :state %>
+      <%= f.label :zip_code%>
+      <%= address_form.text_field :zip_code %>
+      <%end%>
+      <%= f.submit "Save Change", :class => "button"  %>
+      </fieldset>
+      <% end %>
+    </div>
+  </div>
+  <div class="large-3 columns"><br /></div>
 </div>
+
