--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,39 +1,29 @@
-<div class="container">
-  <h1>Edit Your Information</h1>
+<div class="row">
+  <div class="large-3 columns"><br />
+  </div>
+  <div class="large-6 columns">
 
-  <%= form_for :user, url: user_path(@user), method: :patch do |f| %>
-  <p>
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </p>
-  <p>
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </p>
-  <p>
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </p>
-  <p>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label "Password Confirmation" %><br>
-    <%= f.password_field :password_confirmation %>
-  </p>
-  <p>
-    <%= f.label :picture %><br>
-    <%= f.file_field :avatar %>
-  </p>
-
-  <p>
-    <%= f.submit "Save Change", :class => "button"  %>
-  </p>
-
-  <% end %>
+    <%= form_for :user, url: user_path(@user), method: :patch do |f| %>
+    <fieldset>
+    <legend>Edit your Information</legend>
+      <%= f.label :first_name %><br>
+      <%= f.text_field :first_name %>
+      <%= f.label :last_name %><br>
+      <%= f.text_field :last_name %>
+      <%= f.label :phone %><br>
+      <%= f.text_field :phone %>
+      <%= f.label :email %><br>
+      <%= f.text_field :email %>
+      <%= f.label :password %><br>
+      <%= f.password_field :password %>
+      <%= f.label :password_confirmation, "Password Confirmation" %><br>
+      <%= f.password_field :password_confirmation %>
+      <%= f.label :picture %><br>
+      <%= f.file_field :avatar %>
+      <%= f.submit "Save Change", :class => "button"  %>
+    </fieldset>
+    <% end %>
+  </div>
+  <div class="large-3 columns"><br /></div>
 </div>
+
