--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,34 @@
-<% provide(:title, 'Sign up')%>
+<div class="row">
+  <div class="large-3 columns"><br />
+  </div>
+  <div class="large-6 columns">
+    <% provide(:title, 'Sign up')%>
 
-<div class="page_header">Sign up</div>
-<br>
+    <h3><div class="page_header">Sign up</div></h3>
+    <br>
 
-<%= form_for :user, url: '/users', :html => { :multipart => true } do |f|%>
-First Name: <br><%= f.text_field :first_name %><br><br>
-Last Name: <br><%= f.text_field :last_name %><br><br>
-Cell Phone Number: <br><%= f.text_field :phone %><br><br>
-Email:<br> <%= f.text_field :email %><br><br>
-Password: <br><%= f.password_field :password %><br><br>
-Password Confirmation: <br><%= f.password_field :password_confirmation %><br><br>
-Picture: <br><%= f.file_field :avatar %><br><br>
-<%= f.submit "Submit", :class => "button success"  %>
-<%end%>
-<div>
+    <%= form_for :user, url: '/users', :html => { :multipart => true } do |f|%>
+    <fieldset>
+    <legend>Create a New Account</legend>
+    <%= f.label :first_name%>
+    <%= f.text_field :first_name %>
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+    <%= f.label :phone %>
+    <%= f.text_field :phone %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, "Password Confrimation" %>
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar %>
+    <%= f.submit "Submit", :class => "button success"  %>
+    </fieldset>
+    <%end%>
+    <div>
+    </div>
+  </div>
+  <div class="large-3 columns"><br /></div>
 </div>
