--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,14 +3,14 @@
   </div>
   <div class="large-6 columns">
 <%= form_for [@house, @event], method: :patch do |f| %>
-  <fieldset>
-  <legend>Create a New Message</legend>
+<fieldset>
+    <legend>Edit this Event</legend>
   <%= f.label :name, "Event name" %>
-  <%= f.text_field :name %><br>
+  <%= f.text_field :name %>
   <%= f.label :description %>
-  <%= f.text_area :description %><br>
+  <%= f.text_area :description %>
   <%= f.label :date %>
-  <%= f.datetime_local_field :date %><br><br>
+  <%= f.datetime_local_field :date %>
   <%= f.submit "Update Event", :class => "button"  %>
   </fieldset>
   <% end %>
