--- a/app/views/property_managers/new.html.erb
+++ b/app/views/property_managers/new.html.erb
@@ -2,29 +2,7 @@
 <div class="large-3 columns"><br />
   </div>
   <div class="large-6 columns">
-<%= form_for [@house, @manager] do |f|%>
-<fieldset>
-    <legend>Set up a property Manager</legend>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<%= f.label :phone%>
-<%= f.text_field :phone %>
-<%= f.label :email%>
-<%= f.text_field :email %>
-
-  <%= f.fields_for :address do |address_form| %>
-  <%= f.label :street %>
-<%= address_form.text_field :street %>
-<%= f.label :city %>
-    <%= address_form.text_field :city %>
-    <%= f.label :state %>
-  <%= address_form.text_field :state %>
-  <%= f.label :zip_code, "Zip code"%>
-  <%= address_form.text_field :zip_code %>
-  <%end%>
-  </fieldset>
-<%= f.submit "Submit", :class => "button"  %>
-<%end%>
+<%= render 'houses/form' %>
 
   </div>
   <div class="large-3 columns"><br /></div>
