menu fully working, log in and our working, registration working, CRUD messages working

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -16,6 +16,14 @@
   font-size: 18px;
 }
 
+.logout {
+  background-color: #333333;
+}
+
+.logout:hover {
+  background-color: #333333;
+}
+
 .menu {
   display:block;
 }
