--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= yield :head %>
 </head>
 <body>
-  <%= react_component('Header', isLoggedIn: !!current_user, email: current_user.try(:email), houseName: current_user.houses.first.try(:name), houseID: current_user.houses.first.try(:id), userID: current_user.try(:id)) %>
+  <%= react_component('Header', isLoggedIn: !!current_user, email: current_user.try(:email), houseName: current_user.try(:houses).try(:first).try(:name), houseID: current_user.try(:houses).try(:first).try(:id), userID: current_user.try(:id)) %>
 
   <div class="content">
     <%= yield %>
