trying to fix routes for link_to

--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -6,10 +6,10 @@
   <% log = @user.chore_logs.where(chore_id: chore.id ) %>
   <%= chore.task %> <br>
   Completed :<%= chore.chore_logs.size %> <br>
-  <%= link_to 'View Log', house_chore_path(@house, chore) %>
-  <%= link_to 'Complete',  house_chore_chore_log_path(@house, chore, @user.chore_logs.new(chore: chore)), method: :post %>
-  <%= link_to 'Edit', edit_house_chore_path(@house, chore) %><br>
-  <%= link_to "Delete", house_chore_path(@house, chore), method: :delete,
+  <%= link_to 'View Log', chores_path(chore) %>
+  <%= link_to 'Complete',  chore_chore_logs(chore)%>
+  <%= link_to 'Edit', edit_chore_path(chore) %><br>
+  <%= link_to "Delete", chores_path(chore), method: :delete,
     data: {confirm: "Are you sure?"} %><br>
   <% end %>
 <% end %>
