--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -3,10 +3,10 @@
 <% if @rules != nil %>
   <h4>Rules:</h4>
   <% @rules.each do |rule| %>
-  <%= rule.housing_assignment.user.first_name %>: <%= rule.content %> <br>
-    <%= link_to "Destroy", house_rule_path(@house, rule), method: :delete,
+  <%= rule.content %> <br>
+    <%= link_to "Destroy", rule_path(rule), method: :delete,
     data: {confirm: "Are you sure?"} %><br>
-  <%= link_to 'Edit', edit_house_rule_path(@house, rule) %><br>
+  <%= link_to 'Edit', edit_rule_path(rule) %><br>
   <% end %>
 <% end %>
 </div>
