--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -1,15 +1,14 @@
 <div class="row">
   <div class="small-6 large-2 columns"><br></div>
   <div class="small-6 large-8 columns">
-<div id="rules">
+<div id="rule_list">
+
 <% if @rules != nil %>
-  <h4>Rules:</h4>
-  <% @rules.each do |rule| %>
-  <%= rule.content %> <br>
-    <%= link_to "Destroy", house_rule_path(@house, rule), method: :delete,
-    data: {confirm: "Are you sure?"} %><br>
-  <%= link_to 'Edit', edit_house_rule_path(@house, rule) %><br>
-  <% end %>
+<h4>Rules:</h4>
+<table>
+
+<%= render @rules %>
+</table>
 <% end %>
 </div>
 <div>
