--- a/app/views/chores/edit.html.erb
+++ b/app/views/chores/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="large-3 columns"><br />
   </div>
   <div class="large-6 columns">
-  <%= form_for [@house, @chore], method: :patch do |f| %>
+  <%= form_for @chore, method: :patch do |f| %>
   <%= f.label :task %>
   <%= f.text_area :task %><br><br>
   <%= f.submit "Update Chore", :class => "button"  %>
