--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -7,9 +7,9 @@
   <h4>Rules:</h4>
   <% @rules.each do |rule| %>
   <%= rule.content %> <br>
-    <%= link_to "Destroy", rule_path(rule), method: :delete,
+    <%= link_to "Destroy", house_rule_path(@house, rule), method: :delete,
     data: {confirm: "Are you sure?"} %><br>
-  <%= link_to 'Edit', edit_rule_path(rule) %><br>
+  <%= link_to 'Edit',  edit_house_rule_path(@house, rule) %><br>
   <% end %>
 <% end %>
 </div>
