--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -1,23 +1,24 @@
 <div class="row">
   <div class="small-6 large-2 columns"><br></div>
   <div class="small-6 large-8 columns">
-<div id="rule_list">
+      <h4>Rules:</h4>
+      <table>
+        <div id="rule_list">
+        <% if @rules != nil %>
+        <%= render @rules %>
+        <%end%>
+        </div>
+    </table>
+    <h4>New Rule</h4>
+    <%= render 'rules/form' %>
 
-<% if @rules != nil %>
-  <h4>Rules:</h4>
-  <% @rules.each do |rule| %>
-  <%= rule.content %> <br>
-    <%= link_to "Destroy", rule_path(rule), method: :delete,
-    data: {confirm: "Are you sure?"} %><br>
-  <%= link_to 'Edit', edit_rule_path(rule) %><br>
-  <% end %>
-<% end %>
-</div>
-<div>
-  <h4>New Rule</h4>
-  <%= render 'rules/form' %>
-</div>
 
   </div>
   <div class="small-12 large-2 columns"><br></div>
 </div>
+
+
+
+
+
+
