--- a/app/views/communal_items/_issue.html.erb
+++ b/app/views/communal_items/_issue.html.erb
@@ -1,1 +1,1 @@
-<strong>Issue</strong>@<%= issue.user.first_name %>: <%= issue.reason %><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<strong>Issue</strong>@<%= issue.user.first_name %>: <%= issue.reason %><br>
