--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,36 @@
-
 <div class="row">
-<div class="large-3 columns"><br />
-  </div>
-  <div class="large-6 columns">
+  <div class="small-6 large-2 columns"><br></div>
+  <div class="small-6 large-8 columns">
 <% if current_user == @user %>
 <h2>Hi, <%= current_user.first_name%>!</h2>
 <% if @user.avatar.url !="/images/original/missing.png"%>
 <%= image_tag @user.avatar.url %>
 <%end%>
 
-<%= link_to("Edit Your Information", edit_user_path(@user))%>
+<%= link_to "Edit Your Information", edit_user_path(@user), :id => "edit_user_info_user_page" %>
+<div id="edit_user_info_user_page_form">
+<%= form_for @user, :html => { :multipart => true }, method: :patch do |f| %>
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+    <%= f.label :phone %>
+    <%= f.text_field :phone %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    <%= f.label "Password Confirmation" %>
+    <%= f.password_field :password_confirmation %>
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar %>
+    <%= f.submit "Save Change", :class => "button"  %>
+  <% end %>
+
+</div>
 
 <br><br>
-<%= form_tag("/logout", :controller=>"sessions", :method=>"delete") do %>
-  <%= submit_tag "Logout" %>
-<% end %>
-
 <% if @user.houses.length != 0 %>
 <h4>Your House:</h4>
 <% end %>
@@ -23,16 +38,22 @@
 <%= house.name %> <%= link_to("Enter", house_messages_path(house)) %><br>
 <% end %>
 
-<br><br>
+<br>
 
 <%= link_to "New House", new_house_path %>
 <%end%>
 
-<br><br>
+<br>
 
 <%= link_to "All Houses", houses_path %>
 
   </div>
-  <div class="large-3 columns"><br /></div>
+  <div class="small-12 large-2 columns"><br></div>
 </div>
+
+
+
+
+
+
 
