--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -1,25 +1,31 @@
-
-<div id="chores">
-<% if @chores != nil %>
-  <h4>Chores: </h4>
-  <% @chores.each do |chore| %>
-  <% log = @user.chore_logs.where(chore_id: chore.id ) %>
-  <%= chore.task %> <br>
-  Completed :<%= chore.chore_logs.size %> <br>
-  <%= link_to 'View Log', chore_path(chore) %>
-  <%= link_to 'Complete',  chore_chore_logs_path(chore), method: :post %>
-  <%= link_to 'Edit', edit_chore_path(chore) %><br>
-  <%= link_to "Delete", chore_path(chore), method: :delete,
-    data: {confirm: "Are you sure?"} %><br>
-  <% end %>
-<% end %>
+<div class="row">
+  <div class="large-3 columns"><br />
+  </div>
+  <div class="large-6 columns">
+    <div id="chore_list">
+      <% if @chores != nil %>
+      <div id="chore_title"><h4>Chores </h4></div>
+      <br>
+      <% @chores.each do |chore| %>
+      <% log = @user.chore_logs.where(chore_id: chore.id ) %>
+      <div class="chore">
+        <div class="chore_task"><h5><%= chore.task %></h5> <br></div>
+        <div class="completed_chore_count">Completed :<%= chore.chore_logs.size %> </div>
+      
+        <%= button_to 'View Log', chore_path(chore),method: :get, :class => "button tiny", :id => "view_log" %>
+        <%= button_to "Complete", chore_chore_logs_path(chore),method: :post, :class => "button tiny", :id => "complete_log" %>
+        <%= button_to "Promise", chore_chore_logs_path(chore),method: :post, :class => "button tiny", :id => "chore_promise" %>
+        <%= button_to "Issue", chore_chore_logs_path(chore),method: :post, :class => "button tiny", :id => "chore_issue" %>
+        <%= button_to "Edit", edit_chore_path(chore),method: :get, :class => "button tiny", :id => "edit_log" %>
+        <%= button_to "Delete", chore_path(chore), method: :delete, :class => ["button tiny", "button alert"], :id => "delete_chore", data: {confirm: "Are you sure?"}  %>
+      </div>
+      <br>
+      <% end %>
+      <% end %>
+    </div>
+    <div>
+      <%= render 'chores/form' %>
+    </div>
+  </div>
+  <div class="large-3 columns"><br /></div>
 </div>
-<div>
-  <h4>New Chore</h4>
-  <%= form_for :chore, url: house_chores_path(@house) do |f| %>
-  <%= f.label :task %>
-  <%= f.text_field :task %><br><br>
-  <%= f.submit "Add Chore", :class => "button" %>
-  <% end %>
-</div>
-
