chores looking good

--- a/app/views/chores/_form.html.erb
+++ b/app/views/chores/_form.html.erb
@@ -1,4 +1,4 @@
-   <h4>New Chore</h4>
+   <h4 style="text-align:center">New Chore</h4>
   <%= form_for :chore, url: house_chores_path(@house) do |f| %>
   <%= f.label :task %>
   <%= f.text_field :task, :class => "chore_fields" %><br><br>
