--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,8 +1,85 @@
 .edit-house-form-div {
-  display: none;
+display: none;
 }
-
 .chore {
-  border-style: groove;
-  border-color: rgba(0, 140, 186, 0.27);
+position: relative;
+border-style: groove;
+border-color: rgba(0, 140, 186, 0.27);
+margin: 1em ;
+width: 23em;
+height: 16em;
+float: left;
+margin-left: 5em;
+}
+.chore_task h5 {
+position: relative;
+bottom: 4em;
+margin-left: auto;
+margin-right: auto;
+box-sizing: border-box;
+text-align: center;
+letter-spacing: -0.02em;
+}
+.edit_chore {
+position: relative;
+margin-left: 84%;
+}
+.chore_issue{
+position: relative;
+bottom: 5em;
+}
+.completed_chore_count{
+text-align: center;
+clear: b
+}
+.complete_log {
+position: relative;
+margin-left: 20%;
+bottom: 8.1em;
+}
+.chore_promise {
+position: relative;
+margin-left: 60%;
+bottom: 13em;
+}
+.delete_chore {
+position: relative;
+float: right;
+bottom: 10.24em;
+}
+.view_log {
+position: relative;
+bottom: 5.25em;
+}
+#chore_title {
+text-align: center;
+}
+.user_chore_count {
+position: relative;
+bottom: 12.5em;
+font-size: 1em;
+width: 5%;
+height: 5%;
+left: 8.25em;
+}
+th.user_chore_count{
+vertical-align: top;
+height: 10%;
+text-align: center;
+}
+td.user_chore_count{
+vertical-align: top;
+text-align: center;
+
+}
+#chore_form{
+position: fixed
+float: right;
+}
+h4#chore_form{
+position: fixed
+float: right;
+}
+#chore_list {
+float: right;
 }
