join house and event issue and rule issue work

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,14 @@
  *= require_tree .
  */
 
+form.event_issue {
+  display: none;
+}
+
+form.rule_issue {
+  display: none;
+}
+
 #edit-house-form-div {
   display: none;
 }
