--- a/app/views/rules/_rule.html.erb
+++ b/app/views/rules/_rule.html.erb
@@ -1,5 +1,21 @@
-  <table class="rule-table"><tr><td class="rule-content"><%= rule.content %></td>
-  <td class="rule-parts"><%= link_to "Destroy", house_rule_path(@house, rule), method: :delete,
-    data: {confirm: "Are you sure?"} %></td>
-  <td class="rule-parts"><%= link_to 'Edit', edit_house_rule_path(@house, rule) %></td>
-  <td class="rule-parts"></td></tr></table>
+  <table class="rule-table"><tr>
+  	<td class="rule-parts"><%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> </td>
+  	<td class="rule-content"><%= rule.content %><br>
+  	<%= form_for :issue, url: "/houses/#{@house.id}/rules/#{rule.id}/issue", html: { class: "rule_issue"} do |f| %>
+    <%= f.text_area :reason, :placeholder => "Reason" %>
+    <%= f.submit "Submit Issue" %>
+  <% end %>
+  <% if rule.issues %>
+    <% rule.issues.each do |issue| %>
+        <%= render partial: "issue", locals: { issue: issue } %>
+    <% end %>
+  <% end %>
+</td>
+  	<td class="rule-parts"><%= link_to "Destroy", house_rule_path(@house, rule), method: :delete,
+  	data: {confirm: "Are you sure?"} %></td>
+  	<td class="rule-parts"><%= link_to 'Edit', edit_house_rule_path(@house, rule) %></td>
+  	<td class="rule-parts"></td>
+</tr>
+  </table>
+
+  
